[package]
name = "test1"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "test1"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
devnet= [] 

[dependencies]
anchor-lang = "0.19.0"
anchor-spl ="0.19.0"
serum-swap = { path = "../swap", features = ["cpi","devnet"] }
